--- a/AsianApi/UCTable.xaml
+++ b/AsianApi/UCTable.xaml
@@ -6,7 +6,7 @@
              xmlns:local="clr-namespace:AsianApi"
              mc:Ignorable="d" 
             
-             Height="768" Width="1760" MinHeight="768" MinWidth="1760" Background="Black" Loaded="Window_Loaded">
+             Height="640" Width="1460" MinHeight="640"  Background="Black" Loaded="Window_Loaded">
 
     <UserControl.Resources>
         <local:MultiBindingConverter_myConv x:Key="MultiBindingConverter_myConv" />
@@ -52,12 +52,12 @@
             </DataGrid.RowStyle> 
         </DataGrid>
         <Image Source="Resources\head.jpg" 
-               Width="1350" 
+               Width="1050" 
                HorizontalAlignment="Left" 
                VerticalAlignment = "Top" 
                Grid.Column="1" Grid.Row="0" Grid.RowSpan="2"/>
         <DataGrid  x:Name="grid"  ItemsSource="{Binding Path=Itog_result}"
-                   Width="1350"
+                   Width="1048"
                    HorizontalAlignment="Left"
                    VerticalAlignment = "Top" 
                    Margin="0,23,0,0"
@@ -68,39 +68,46 @@
                    GridLinesVisibility="Horizontal" 
                    HeadersVisibility="None"
                    AutoGenerateColumns="False"
-           
+                   VerticalScrollBarVisibility="Disabled"
                   
                   
                    Grid.Column="1" Grid.Row="1">
             <DataGrid.Columns>
-                <DataGridTextColumn Header="TIME"             Binding="{Binding TIME}"             IsReadOnly="True" Width="71"/>
-                <DataGridTextColumn Header="EVENT"            Binding="{Binding EVENT}"            IsReadOnly="True" Width="285"/>
+                <DataGridTextColumn Header="TIME"             Binding="{Binding TIME}"             IsReadOnly="True" Width="70"/>
+                <DataGridTextColumn Header="EVENT"            Binding="{Binding EVENT}"            IsReadOnly="True" Width="281"/>
 
                 <DataGridTextColumn Header="FULL_TIME_1X2"    Binding="{Binding FULL_TIME_1X2}"    IsReadOnly="True" Width="48" Foreground="Green" FontWeight="Bold"/>
                 <DataGridTextColumn Header="FULL_TIME_HDP_1"  Binding="{Binding FULL_TIME_HDP_1}"  IsReadOnly="True" Width="47"/>
                 <DataGridTextColumn Header="FULL_TIME_HDP_2"  Binding="{Binding FULL_TIME_HDP_2}"  IsReadOnly="True" Width="47"/>
                 <DataGridTextColumn Header="FULL_TIME_OU_1"   Binding="{Binding FULL_TIME_OU_1}"   IsReadOnly="True" Width="53"/>
                 <DataGridTextColumn Header="FULL_TIME_OU_2"   Binding="{Binding FULL_TIME_OU_2}"   IsReadOnly="True" Width="53"/>
+                
+                <DataGridTextColumn Header="Bet_FULL_TIME_1X2"    Binding="{Binding Bet_FULL_TIME_1X2}" Width="50" Foreground="Green" FontWeight="Bold"/>
+                <DataGridTextColumn Header="Bet_FULL_1X2"         Binding="{Binding Bet_FULL_1X2}"        Width="50" Foreground="Green" FontWeight="Bold"/>
+                
                 <DataGridTextColumn Header="FIRST_HALF_1X2"   Binding="{Binding FIRST_HALF_1X2}"   IsReadOnly="True" Width="48" Foreground="Red" FontWeight="Bold"/>
                 <DataGridTextColumn Header="FIRST_HALF_HDP_1" Binding="{Binding FIRST_HALF_HDP_1}" IsReadOnly="True" Width="47"/>
                 <DataGridTextColumn Header="FIRST_HALF_HDP_2" Binding="{Binding FIRST_HALF_HDP_2}" IsReadOnly="True" Width="47"/>
                 <DataGridTextColumn Header="FIRST_HALF_OU_1"  Binding="{Binding FIRST_HALF_OU_1}"  IsReadOnly="True" Width="53"/>
                 <DataGridTextColumn Header="FIRST_HALF_OU_2"  Binding="{Binding FIRST_HALF_OU_2}"  IsReadOnly="True" Width="53"/>
+                
+                <DataGridTextColumn Header="Bet_FIRST_HALF_1X2"   Binding="{Binding Bet_FIRST_HALF_1X2}" Width="49" Foreground="Red" FontWeight="Bold"/>
+                <DataGridTextColumn Header="Bet_FIRST_1X2"        Binding="{Binding Bet_FIRST_1X2}"         Width="50" Foreground="Red" FontWeight="Bold"/>
 
-                <DataGridTextColumn Header="Bet_FULL_TIME_1X2"    Binding="{Binding Bet_FULL_TIME_1X2, Mode=TwoWay}"                      Width="48" Foreground="Green" FontWeight="Bold"/>
-                <DataGridTextColumn Header="Bet_FULL_TIME_HDP_1"  Binding="{Binding Bet_FULL_TIME_HDP_1}"  IsReadOnly="True" Width="47"/>
+
+                <!--      <DataGridTextColumn Header="Bet_FULL_TIME_HDP_1"  Binding="{Binding Bet_FULL_TIME_HDP_1}"  IsReadOnly="True" Width="47"/>
                 <DataGridTextColumn Header="Bet_FULL_TIME_HDP_2"  Binding="{Binding Bet_FULL_TIME_HDP_2}"  IsReadOnly="True" Width="47"/>
                 <DataGridTextColumn Header="Bet_FULL_TIME_OU_1"   Binding="{Binding Bet_FULL_TIME_OU_1}"   IsReadOnly="True" Width="53"/>
-                <DataGridTextColumn Header="Bet_FULL_TIME_OU_2"   Binding="{Binding Bet_FULL_TIME_OU_2}"   IsReadOnly="True" Width="53"/>
-                <DataGridTextColumn Header="Bet_FIRST_HALF_1X2"   Binding="{Binding Bet_FIRST_HALF_1X2}"                    Width="48" Foreground="Red" FontWeight="Bold"/>
-                <DataGridTextColumn Header="Bet_FIRST_HALF_HDP_1" Binding="{Binding Bet_FIRST_HALF_HDP_1}" IsReadOnly="True" Width="47"/>
+                <DataGridTextColumn Header="Bet_FULL_TIME_OU_2"   Binding="{Binding Bet_FULL_TIME_OU_2}"   IsReadOnly="True" Width="53"/> -->
+               
+          <!--      <DataGridTextColumn Header="Bet_FIRST_HALF_HDP_1" Binding="{Binding Bet_FIRST_HALF_HDP_1}" IsReadOnly="True" Width="47"/>
                 <DataGridTextColumn Header="Bet_FIRST_HALF_HDP_2" Binding="{Binding Bet_FIRST_HALF_HDP_2}" IsReadOnly="True" Width="47"/>
                 <DataGridTextColumn Header="Bet_FIRST_HALF_OU_1"  Binding="{Binding Bet_FIRST_HALF_OU_1}"  IsReadOnly="True" Width="53"/>
-                <DataGridTextColumn Header="Bet_FIRST_HALF_OU_2"  Binding="{Binding Bet_FIRST_HALF_OU_2}"  IsReadOnly="True" Width="53"/>
+                <DataGridTextColumn Header="Bet_FIRST_HALF_OU_2"  Binding="{Binding Bet_FIRST_HALF_OU_2}"  IsReadOnly="True" Width="53"/> -->
 
-                <DataGridTextColumn Header="LeagueId" Binding="{Binding LeagueId}"      IsReadOnly="True"       Visibility="Visible"        Width="100"/>
-                <DataGridTextColumn Header="MathcId"  Binding="{Binding MathcId}"       IsReadOnly="True"       Visibility="Visible"        Width="100"/>
-                <DataGridTextColumn Header="GameId"   Binding="{Binding GameId}"        IsReadOnly="True"       Visibility="Visible"        Width="100"/>
+                <DataGridTextColumn Header="LeagueId" Binding="{Binding LeagueId}"      IsReadOnly="True"       Visibility="Hidden"        Width="100"/>
+                <DataGridTextColumn Header="MathcId"  Binding="{Binding MathcId}"       IsReadOnly="True"       Visibility="Hidden"        Width="100"/>
+                <DataGridTextColumn Header="GameId"   Binding="{Binding GameId}"        IsReadOnly="True"       Visibility="Hidden"        Width="100"/>
 
             </DataGrid.Columns >
             <DataGrid.RowStyle>
