--- a/AsianApi/UCTable.xaml
+++ b/AsianApi/UCTable.xaml
@@ -177,7 +177,8 @@
                    Width="1310"
                    Opacity="0.95"
                    Margin="0,0,10,0"
-                   MouseUp="bets_MouseUp" 
+                   MouseLeftButtonUp="bets_MouseUp" 
+                   MouseRightButtonUp="bets_del"
                    GridLinesVisibility="Horizontal" 
                    HeadersVisibility="All"
                    AutoGenerateColumns="False"
